--- a/force-app/main/default/aura/ConditionsOfInterestView/ConditionsOfInterestView.cmp
+++ b/force-app/main/default/aura/ConditionsOfInterestView/ConditionsOfInterestView.cmp
@@ -9,6 +9,7 @@
     <aura:attribute name="filterText" type="String" default=""/>
     <aura:attribute name="participantId" type="String"/>
     <aura:attribute name="initialized" type="Boolean" default="false"/>
+    <aura:attribute name="showDropdown" type="Boolean" default="false"/>
 
     <aura:registerEvent name="updateSearchEvent" type="c:UpdateConditionsOfInterestSearchEvt"/>
 
@@ -17,7 +18,7 @@
     <div class="slds-grid slds-wrap">
         <div style="width: 100%">
             <div class="label-default">
-                <label>Conditions of interest</label>
+                <label>{!$Label.c.TrialSearch_Conditions_of_interest}</label>
             </div>
             <div class="slds-grid slds-grid_vertical">
                 <aura:if isTrue="{!!empty(v.taps)}">
@@ -32,7 +33,7 @@
             <div class="slds-form-element">
                 <div class="slds-form-element__control">
                     <div class="slds-combobox_container">
-                        <div class="slds-combobox slds-dropdown-trigger slds-dropdown-trigger_click"
+                        <div class="slds-combobox slds-dropdown-trigger slds-dropdown-trigger_click slds-is-open"
                              aura:id="searchContainer"
                              aria-expanded="false"
                              aria-haspopup="listbox"
@@ -41,27 +42,29 @@
                             <div class="slds-combobox__form-element slds-input-has-icon slds-input-has-icon_right" role="none">
                                 <lightning:input type="search" aura:id="search" autocomplete="off"
                                                  disabled="{!v.taps.length >= 6}"
-                                                 placeholder="Search for anoter condition"
+                                                 placeholder="{!$Label.c.TrialSearch_Search_for_another_condition}"
                                                  onfocus="{!c.onFocus}"
                                                  onblur="{!c.onBlur}"
                                                  onchange="{!c.doSearch}"/>
                             </div>
                             <!--Dropdown-->
-                            <div id="listbox-id-1" class="slds-dropdown slds-dropdown_length-5 slds-dropdown_fluid" role="listbox">
-                                <ul class="slds-listbox slds-listbox_vertical" role="presentation">
-                                    <aura:iteration items="{!v.searchResults}" var="searchItem">
-                                        <li role="presentation" class="slds-listbox__item">
-                                            <div class="slds-media slds-listbox__option slds-listbox__option_plain slds-media_small" role="option"
-                                                 id="{!searchItem.Id}" onclick="{!c.handleSelection}">
-                                                <span class="slds-media__figure slds-listbox__option-icon"></span>
-                                                <span class="slds-media__body">
+                            <aura:if isTrue="{!v.showDropdown}">
+                                <div id="listbox-id-1" class="slds-dropdown slds-dropdown_length-5 slds-dropdown_fluid" role="listbox">
+                                    <ul class="slds-listbox slds-listbox_vertical" role="presentation">
+                                        <aura:iteration items="{!v.searchResults}" var="searchItem">
+                                            <li role="presentation" class="slds-listbox__item">
+                                                <div class="slds-media slds-listbox__option slds-listbox__option_plain slds-media_small" role="option"
+                                                     id="{!searchItem.Id}" onclick="{!c.handleSelection}">
+                                                    <span class="slds-media__figure slds-listbox__option-icon"></span>
+                                                    <span class="slds-media__body">
                                                 <span class="slds-truncate" title="{!searchItem.Name}">{!searchItem.Name}</span>
                                             </span>
-                                            </div>
-                                        </li>
-                                    </aura:iteration>
-                                </ul>
-                            </div>
+                                                </div>
+                                            </li>
+                                        </aura:iteration>
+                                    </ul>
+                                </div>
+                            </aura:if>
                         </div>
                     </div>
                 </div>
@@ -69,17 +72,17 @@
 
             <!--Enrollment Status Area-->
             <div class="label-default margin-top">
-                <label>Conditions of interest</label>
+                <label>{!$Label.c.TrialSearch_Enrollment_Status}</label>
             </div>
             <div class="slds-grid slds-grid_vertical">
                 <aura:if isTrue="{!!empty(v.taps)}">
-                    <lightning:input aura:id="enrolling" type="checkbox" label="Enrolling" checked="true"/>
-                    <lightning:input aura:id="notYetEnrolling" type="checkbox" label="Not yet enrolling" checked="true"/>
+                    <lightning:input aura:id="enrolling" type="checkbox" label="{!$Label.c.TrialSearch_Enrolling}" checked="true"/>
+                    <lightning:input aura:id="notYetEnrolling" type="checkbox" label="{!$Label.c.TrialSearch_Not_Yet_Enrolling}" checked="true"/>
                 </aura:if>
             </div>
 
             <div class="margin-top">
-                <lightning:button variant="neutral" onclick="{!c.updateSearchResults}" value="Update Search Results" label="Update Search Results"/>
+                <lightning:button variant="neutral" onclick="{!c.updateSearchResults}" label="{!$Label.c.TrialSearch_Update_Search_Results}"/>
             </div>
         </div>
     </div>
