--- a/force-app/main/default/aura/FileUpload/FileUpload.cmp
+++ b/force-app/main/default/aura/FileUpload/FileUpload.cmp
@@ -57,6 +57,10 @@
                                       onuploadfinished="{!c.handleUpload}" />
             </footer>
         </aura:if>
+        <footer class="slds-card__footer">
+            <lightning:fileUpload label="" multiple="false"
+                                  accept="{!v.fileType}" recordId="{!v.recordId}"
+                                  onuploadfinished="{!c.handleUpload}" />
         <aura:if isTrue="{!v.isPopupOpen}">
             <section role="dialog" tabindex="-1" aria-labelledby="modal-heading-01" aria-modal="true" aria-describedby="modal-content-id-1" class="slds-modal slds-fade-in-open">
                 <div class="slds-modal__container">
