--- a/force-app/main/default/aura/ParticipantCard/ParticipantCard.cmp
+++ b/force-app/main/default/aura/ParticipantCard/ParticipantCard.cmp
@@ -14,7 +14,8 @@
 
     <!-- component body: -->
     <aura:if isTrue="{!v.participantItem.showParticipationSteps}">
-        <c:PSECard pe="{!v.participantItem.pe}" steps="{!v.participantItem.participationFlowSteps}" userMode="{!v.userMode}"/>
+        <c:PSECard pe="{!v.participantItem.pe}" steps="{!v.participantItem.participationFlowSteps}" parent="{!v.parent}" userMode="{!v.userMode}" peStatusesPathList="{!v.participantItem.peStatusesPathList}"
+                   peStatusStateMap="{!v.participantItem.peStatusStateMap}"/>
         <aura:set attribute="else">
             <c:ViewPatientItem pe="{!v.participantItem.pe}"
                                actions="{!v.actions}"
