--- a/force-app/main/default/aura/Form_EditPatientInfo/Form_EditPatientInfo.cmp
+++ b/force-app/main/default/aura/Form_EditPatientInfo/Form_EditPatientInfo.cmp
@@ -131,17 +131,18 @@
             <div class="slds-grid slds-gutters slds-wrap">
                 <aura:if isTrue="{!!v.updateMode}">
                     <div class="rr-form-element slds-col slds-size--1-of-1 slds-large-size--1-of-3">
-                        <div class="label"><abbr title="required" class="slds-required">*</abbr>{!$Label.c.PG_AP_F_Patient_Status}</div>
+                        <div class="label"><abbr title="required"
+                                                 class="slds-required">*</abbr>{!$Label.c.PG_AP_F_Patient_Status}</div>
                         <c:rrSelect options="{!v.formData.peStatusLVList}" value="{!v.pe.Participant_Status__c}"
                                     placeholder="{!$Label.c.PG_AC_Select}" required="true" useSentenceFont="false"/>
                     </div>
-                    <div class="rr-form-element slds-col slds-size--1-of-1 slds-large-size--1-of-3">
-                        <div class="label"><abbr title="required"
-                                                 class="slds-required">*</abbr>{!$Label.c.PG_AP_F_Referred_By}</div>
-                        <c:rrSelect options="{!v.formData.referredByLVList}" value="{!v.pe.Referred_By__c}"
-                                    placeholder="{!$Label.c.PG_AC_Select}" required="true" useSentenceFont="false"/>
-                    </div>
                 </aura:if>
+                <div class="rr-form-element slds-col slds-size--1-of-1 slds-large-size--1-of-3">
+                    <div class="label"><abbr title="required"
+                                             class="slds-required">*</abbr>{!$Label.c.PG_AP_F_Referred_By}</div>
+                    <c:rrSelect options="{!v.formData.referredByLVList}" value="{!v.pe.Referred_By__c}"
+                                placeholder="{!$Label.c.PG_AC_Select}" required="true" useSentenceFont="false"/>
+                </div>
                 <div class="rr-form-element slds-col slds-size--1-of-1 slds-large-size--1-of-3">
                     <div class="label">
                         <aura:if isTrue="{!v.screeningRequired}">
@@ -149,7 +150,8 @@
                         </aura:if>
                         {!$Label.c.PG_AP_F_Screening_Subject_Id}
                     </div>
-                    <lightning:input aura:id ="screeningId" type="text" value="{!v.pe.Screening_ID__c}" onblur="{!c.doCheckFields}"
+                    <lightning:input aura:id="screeningId" type="text" value="{!v.pe.Screening_ID__c}"
+                                     onblur="{!c.doCheckFields}"
                                      required="{!v.screeningRequired}"/>
                 </div>
                 <div class="rr-form-element slds-col slds-size--1-of-1 slds-large-size--1-of-3">
