--- a/force-app/main/default/aura/PSEPath/PSEPath.cmp
+++ b/force-app/main/default/aura/PSEPath/PSEPath.cmp
@@ -9,6 +9,11 @@
     <aura:attribute name="pathItems" type="List" access="private"/>
     <aura:attribute name="isCollapsed" type="Boolean" default="true" access="private"/>
     <aura:attribute name="pe" type="Object"/>
+    <aura:attribute name="userMode" type="String"/>
+    <aura:attribute name="parent" type="Aura.Component"/>
+    <aura:attribute name="peStatusesPathList" type="List"/>
+    <aura:attribute name="peStatusStateMap" type="Map"/>
+    <aura:attribute name="enrollmentPathItems" type="List"/>
 
     <!-- handler: -->
     <aura:handler name="init" value="{!this}" action="{!c.doInit}"/>
@@ -21,12 +26,45 @@
             <div class="path-section">
                 <c:RRPath2 pathItems="{!v.pathItems}"/>
             </div>
-            <div class="{!'collapse-section ' + if(v.isCollapsed, '', ' opened')}">
-            <c:RRCollapse label="{!$Label.c.PE_Details}" isCollapsed="{!v.isCollapsed}">
-                <c:PSEStatusHistory aura:id="statusHistory" peId="{!v.pe.Id}"/>
-            </c:RRCollapse>
+            <aura:if isTrue="{!v.userMode == 'Participant'}">
+                <div class="{!'collapse-section ' + if(v.isCollapsed, '', ' opened')}">
+                    <c:RRCollapse label="{!$Label.c.PE_Details}" isCollapsed="{!v.isCollapsed}">
+                        <c:PSEStatusHistory aura:id="statusHistory" peId="{!v.pe.Id}"/>
+                    </c:RRCollapse>
+                </div>
+            </aura:if>
         </div>
-        </div>
+        <aura:if isTrue="{!v.userMode != 'Participant'}">
+            <div class="slds-grid vpi-status-btns slds-gutters_x-small slds-wrap">
+                <div class="{!v.pe.MRR_Survey_Results_URL__c ? 'slds-col slds-size_1-of-1 slds-small-size_4-of-12' : 'slds-col slds-size_1-of-1 slds-small-size_6-of-12'}">
+                    <button class="{!'apollo-btn tertiary'}"
+                            title="{!$Label.c.BTN_Participant_Information}"
+                            onclick="{!c.showEditParticipantInformation}"
+                            value="personalInfoAnchor">
+                        {!$Label.c.BTN_Participant_Information}
+                    </button>
+                </div>
+                <div class="{!v.pe.MRR_Survey_Results_URL__c ? 'slds-col slds-size_1-of-1 slds-small-size_4-of-12' : 'slds-col slds-size_1-of-1 slds-small-size_6-of-12'}">
+                    <button class="{!'apollo-btn tertiary'}"
+                            title="{!$Label.c.BTN_Status_Details}"
+                            onclick="{!c.showEditParticipantInformation}"
+                            value="statusDetailsAnchor">
+                        {!$Label.c.BTN_Status_Details}
+                    </button>
+                </div>
+                <aura:if isTrue="{!v.pe.MRR_Survey_Results_URL__c}">
+                    <div class="slds-col slds-size_1-of-1 slds-small-size_4-of-12">
+                        <button class="{!'apollo-btn tertiary'}"
+                                title="{!$Label.c.BTN_Screener_Responses}"
+                                onclick="{!c.showEditParticipantInformation}"
+                                value="screenerResponsesAnchor">
+                            {!$Label.c.BTN_Screener_Responses}
+                        </button>
+                    </div>
+                </aura:if>
+            </div>
+        </aura:if>
+
     </div>
 
 </aura:component>
