--- a/force-app/main/default/aura/StudySiteCardForPI/StudySiteCardForPI.cmp
+++ b/force-app/main/default/aura/StudySiteCardForPI/StudySiteCardForPI.cmp
@@ -82,7 +82,8 @@
                             <div class="slds-col slds-size_1-of-1 slds-medium-size_3-of-3 other-ss-info-height-control">
                                 <div class="slds-col slds-size_1-of-1 slds-medium-size_2-of-6 other-ss-info-container">
                                     <div class="ss-info-headers">{!$Label.c.SS_Address}</div>
-                                    <div class="ss-info-address">{!v.siteWrapper.studySite.Site__r.BillingStreet + ', ' + v.siteWrapper.studySite.Site__r.BillingCountryCode}</div>
+                                    <div class="ss-info-address">{!v.siteWrapper.studySite.Site__r.Name + ' ' + $Label.c.SS_Location}</div>
+                                    <div class="ss-info-address">{!v.siteWrapper.studySite.Site__r.BillingStreet}</div>
                                     <div class="ss-info-address">{!if(v.siteWrapper.studySite.Site__r.BillingCity!=null, v.siteWrapper.studySite.Site__r.BillingCity + ', ', '') +v.siteWrapper.studySite.Site__r.BillingStateCode + ' ' + v.siteWrapper.studySite.Site__r.BillingPostalCode}</div>
                                     <c:RRIcon
                                             class="{!('Address' == v.siteWrapper.studySite.Site__r.BillingGeocodeAccuracy || 'NearAddress' == v.siteWrapper.studySite.Site__r.BillingGeocodeAccuracy ||
