--- a/force-app/main/default/aura/ViewPatientItem/ViewPatientItem.cmp
+++ b/force-app/main/default/aura/ViewPatientItem/ViewPatientItem.cmp
@@ -67,34 +67,36 @@
                     </div>
                 </div>
 
-                <div class="slds-grid vpi-status-btns slds-gutters_x-small slds-wrap">
-                    <div class="{!v.pe.MRR_Survey_Results_URL__c ? 'slds-col slds-size_1-of-1 slds-small-size_4-of-12' : 'slds-col slds-size_1-of-1 slds-small-size_6-of-12'}">
-                        <button class="{!'apollo-btn tertiary'}"
-                                title="{!$Label.c.BTN_Participant_Information}"
-                                onclick="{!c.showEditParticipantInformation}"
-                                value="personalInfoAnchor">
-                            {!$Label.c.BTN_Participant_Information}
-                        </button>
-                    </div>
-                    <div class="{!v.pe.MRR_Survey_Results_URL__c ? 'slds-col slds-size_1-of-1 slds-small-size_4-of-12' : 'slds-col slds-size_1-of-1 slds-small-size_6-of-12'}">
-                        <button class="{!'apollo-btn tertiary'}"
-                                title="{!$Label.c.BTN_Status_Details}"
-                                onclick="{!c.showEditParticipantInformation}"
-                                value="statusDetailsAnchor">
-                            {!$Label.c.BTN_Status_Details}
-                        </button>
-                    </div>
-                    <aura:if isTrue="{!v.pe.MRR_Survey_Results_URL__c}">
-                        <div class="slds-col slds-size_1-of-1 slds-small-size_4-of-12">
+                <aura:if isTrue="{!not(v.userMode == 'Participant')}">
+                    <div class="slds-grid vpi-status-btns slds-gutters_x-small slds-wrap">
+                        <div class="{!v.pe.MRR_Survey_Results_URL__c ? 'slds-col slds-size_1-of-1 slds-small-size_4-of-12' : 'slds-col slds-size_1-of-1 slds-small-size_6-of-12'}">
                             <button class="{!'apollo-btn tertiary'}"
-                                    title="{!$Label.c.BTN_Screener_Responses}"
+                                    title="{!$Label.c.BTN_Participant_Information}"
                                     onclick="{!c.showEditParticipantInformation}"
-                                    value="screenerResponsesAnchor">
-                                {!$Label.c.BTN_Screener_Responses}
+                                    value="personalInfoAnchor">
+                                {!$Label.c.BTN_Participant_Information}
                             </button>
                         </div>
-                    </aura:if>
-                </div>
+                        <div class="{!v.pe.MRR_Survey_Results_URL__c ? 'slds-col slds-size_1-of-1 slds-small-size_4-of-12' : 'slds-col slds-size_1-of-1 slds-small-size_6-of-12'}">
+                            <button class="{!'apollo-btn tertiary'}"
+                                    title="{!$Label.c.BTN_Status_Details}"
+                                    onclick="{!c.showEditParticipantInformation}"
+                                    value="statusDetailsAnchor">
+                                {!$Label.c.BTN_Status_Details}
+                            </button>
+                        </div>
+                        <aura:if isTrue="{!v.pe.MRR_Survey_Results_URL__c}">
+                            <div class="slds-col slds-size_1-of-1 slds-small-size_4-of-12">
+                                <button class="{!'apollo-btn tertiary'}"
+                                        title="{!$Label.c.BTN_Screener_Responses}"
+                                        onclick="{!c.showEditParticipantInformation}"
+                                        value="screenerResponsesAnchor">
+                                    {!$Label.c.BTN_Screener_Responses}
+                                </button>
+                            </div>
+                        </aura:if>
+                    </div>
+                </aura:if>
 
             </aura:if>
             <aura:if isTrue="{!and(v.userMode == 'PI', v.pe.Participant_Status__c == 'Referral Sent to PI')}">
