--- a/force-app/main/default/aura/StudyDocumentContainer/StudyDocumentContainer.css
+++ b/force-app/main/default/aura/StudyDocumentContainer/StudyDocumentContainer.css
@@ -1,9 +1,12 @@
+.THIS{
+    padding-top: 30px;
+    padding-bottom: 40px;
+}
+
+
 .THIS .resource-footer {
-    width: 100%;
-    height: 50px;
-    margin-top: auto;
-    position: sticky;
-    top: 100%;
+    padding-top: 20px;
+    padding-bottom: 30px;
 }
 
 .THIS .resource-error-message {
@@ -15,35 +18,33 @@
     text-align: center;
 }
 
+.THIS .resources-header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 30px;
+    margin-bottom: 20px;
+}
+
+.THIS .resources-header .slds-form-element__label{
+    display: none;
+}
+
 .THIS .resource-title {
     font-size: 16px;
     font-weight: 600;
     line-height: 27px;
-    margin-bottom: 20px;
-    margin-top: 15px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
 }
+
 
 .THIS .resource-table {
     padding: 0 35px;
-    min-height: 645px;
+    min-height: 300px;
 }
 
 .THIS .study-document-title {
     text-align: left;
     width: 23%;
-}
-
-.THIS .resources-icon-pdf {
-    height: 26px;
-    width: 22px;
-}
-
-.THIS .resources-icon-video {
-    width: 30px;
-    height: 30px;
 }
 
 .THIS .study-document-summary {
@@ -55,11 +56,6 @@
     width: 12%;
 }
 
-.THIS .study-document-icon {
-    width: 65px;
-    text-align: center;
-}
-
 .THIS .study-document-column-data {
     color: #595959;
     font-family: "Proxima Nova";
@@ -67,7 +63,6 @@
     font-weight: 500;
     line-height: 21px;
     max-width: 0;
-    overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
 }
@@ -80,51 +75,25 @@
     border-bottom: 1px solid #F8F9FB;
 }
 
-.THIS .study-document-preview {
-    border: 1px solid lightblue;
+
+.THIS .thumbnail-container{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    background: #e8e8e8;
+    border: 1px solid lightgrey;
+    padding: 5px;
     border-radius: 5px;
-    margin-bottom: 5px;
-/*    padding: 20px;    */
+    height: 210px;
+    margin-bottom: 10px;
 }
 
-.THIS .previous-btn.disabled,
-.THIS .next-btn.disabled{
-    opacity: 0.3;
-    pointer-events: none;
-}
-
-.THIS .resource-pointer {
-    cursor: pointer;
-}
-
-.THIS .card {
-    background: #fff;
+.THIS .thumbnail-img{
+    max-height: 200px;
+    box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.3);
     border-radius: 2px;
-    display: inline-block;
-    height: 200px;
-    margin: 1rem;
-    position: relative;
-    width: 300px;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 }
 
-.THIS .card:hover {
-    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
-}
-
-.THIS .card-image {
-    display: block;
-    min-height: 130px;
-    min-height: 150px;
-    background: #fff center center no-repeat;
-    background-size: cover;
-}
-
-.THIS .card-description {
-    border-top: 2px solid #dfdfdf;
-    display: block;
-    padding: 0.5em;
-    color: #515151;
-    text-decoration: none;
+.THIS .resource-item-container{
+    margin-bottom: 20px;
 }
