--- a/force-app/main/default/aura/ResourceLink/ResourceLink.cmp
+++ b/force-app/main/default/aura/ResourceLink/ResourceLink.cmp
@@ -8,13 +8,13 @@
     <aura:attribute name="resourceWrapper" type="Object"/>
 
     <!-- component body: -->
-    <aura:if isTrue="{!not(empty(v.resourceWrapper.translations))}">
+    <aura:if isTrue="{!v.resourceWrapper.translations.length > 1}">
         <ui:menu>
             <ui:menuTriggerLink>
                 <div class="resource-link-container">
                     <c:RRIcon iconName="{!v.resourceWrapper.resource.document_type__c != 'Video' ? 'icon-pdf' : 'icon-video-study-document'}"
                               class="resource-icon"/>
-                    <div>{!v.resourceWrapper.resource.Title__c}</div>
+                    <div class="resource-name">{!v.resourceWrapper.resource.Title__c}</div>
                 </div>
             </ui:menuTriggerLink>
             <ui:menuList aura:id="actionMenu" class="menu-popup">
@@ -25,11 +25,11 @@
         </ui:menu>
     </aura:if>
 
-    <aura:if isTrue="{!empty(v.resourceWrapper.translations)}">
+    <aura:if isTrue="{!or(empty(v.resourceWrapper.translations), v.resourceWrapper.translations.length == 1)}">
         <div class="resource-link-container">
             <c:RRIcon iconName="{!v.resourceWrapper.resource.document_type__c != 'Video' ? 'icon-pdf' : 'icon-video-study-document'}"
                       class="resource-icon"/>
-            <a onclick="{!c.doNavigateDefault}">{!v.resourceWrapper.resource.Title__c}</a>
+            <a class="resource-name" onclick="{!c.doNavigateDefault}">{!v.resourceWrapper.resource.Title__c}</a>
         </div>
     </aura:if>
 
