--- a/force-app/main/default/aura/ResourceLink/ResourceLink.css
+++ b/force-app/main/default/aura/ResourceLink/ResourceLink.css
@@ -1,13 +1,14 @@
 /**
  * Created by Leonid Bartenev
  */
-.THIS .resource-link-container{
+.THIS .resource-link-container, .THIS.resource-link-container{
     display: flex;
     align-items: center;
 }
 
 .THIS .resource-icon{
     margin-right: 10px;
+    flex-shrink: 0;
 }
 
 .THIS .menu-popup{
@@ -22,5 +23,13 @@
 
 .THIS .menu-popup li:hover{
     background-color: #f2f7ff;
+}
+
+.THIS .resource-name{
+    max-width: 250px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    display: inline-block;
 }
 
