--- a/force-app/main/default/layouts/Participant__c-Participant Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Participant__c-Participant Layout.layout-meta.xml
@@ -49,10 +49,6 @@
                 <behavior>Edit</behavior>
                 <field>Phone_Type__c</field>
             </layoutItems>
-            <layoutItems>
-                <behavior>Edit</behavior>
-                <field>Preferred_Language__c</field>
-            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
@@ -72,11 +68,11 @@
             </layoutItems>
             <layoutItems>
                 <behavior>Edit</behavior>
-                <field>Condition_of_Interest_s__c</field>
+                <field>Preferred_Language__c</field>
             </layoutItems>
             <layoutItems>
                 <behavior>Edit</behavior>
-                <field>Language_Preference__c</field>
+                <field>Condition_of_Interest_s__c</field>
             </layoutItems>
             <layoutItems>
                 <behavior>Readonly</behavior>
@@ -202,7 +198,7 @@
     <showRunAssignmentRulesCheckbox>false</showRunAssignmentRulesCheckbox>
     <showSubmitAndAttachButton>false</showSubmitAndAttachButton>
     <summaryLayout>
-        <masterLabel>00h1j000000YqQB</masterLabel>
+        <masterLabel>00h1X000000OhKq</masterLabel>
         <sizeX>4</sizeX>
         <sizeY>0</sizeY>
         <summaryLayoutStyle>Default</summaryLayoutStyle>
