--- a/force-app/main/default/aura/PastStudyCard/PastStudyCard.cmp
+++ b/force-app/main/default/aura/PastStudyCard/PastStudyCard.cmp
@@ -12,7 +12,7 @@
                 <aura:if isTrue="{!!empty(v.ctp.Profile_Picture__c)}">
                     <img src="{!v.ctp.Profile_Picture__c}"/>
                 </aura:if>
-                <div class="study-title">{!v.ctp.Study_Title__c} ({!v.ctp.Therapeutic_Area__r.Name})</div>
+                <div class="study-title">{!v.ctp.Study_Code_Name__c} ({!v.ctp.Therapeutic_Area__r.Name})</div>
                 <div class="study-description">{!v.ctp.Detailed_Description__c}</div>
 
                 <div class="rr-fields-cutter">
