--- a/force-app/main/default/aura/StudyDetailAboutStudy/StudyDetailAboutStudy.cmp
+++ b/force-app/main/default/aura/StudyDetailAboutStudy/StudyDetailAboutStudy.cmp
@@ -212,7 +212,8 @@
                         -->
                         <div class="title">{!$Label.c.PG_SW_F_Study_Documents}</div>
                         <aura:iteration items="{!v.documents}" var="document">
-                            <div class="text"><a href="{!'/sfc/servlet.shepherd/document/download/'+ document.documentId}" target="_blank">{!document.title}</a></div>
+                            <div class="text"><a href="{!'/RRPDFViewer?documentId=' + document.documentId}" target="_blank">{!document.title}</a></div>
+                            <!--<div class="text"><a href="{!'/sfc/servlet.shepherd/document/download/'+ document.documentId}" target="_blank">{!document.title}</a></div>-->
                         </aura:iteration>
                         <div class="title">{!$Label.c.PG_SW_F_Official_Title}</div>
                         <div class="text">{!v.studyDetail.trial.Official_Title__c}</div>
