--- a/force-app/main/default/aura/PPStudyWorkspace/PPStudyWorkspace.cmp
+++ b/force-app/main/default/aura/PPStudyWorkspace/PPStudyWorkspace.cmp
@@ -186,15 +186,12 @@
             <div id="sd-selected-tab-container" style="position: relative">
                 <div class="rr-width-limiter side-padding rr-min-body-height">
                     <div class="{!if(v.currentTab == 'tab-about-the-study', 'visible-tab', 'invisible-tab')}">
-                        <c:StudyDetailAboutStudy studyDetail="{!v.studyDetail}" userMode="{!v.userMode}"
-                                                 parent="{!this}"/>
+                        <aura:if isTrue="{!!empty(v.studyDetail)}">
+                            <c:StudyDetailAboutStudy studyDetail="{!v.studyDetail}" userMode="{!v.userMode}"
+                                                     parent="{!this}"/>
+                        </aura:if>
                     </div>
-                    <!--                    <aura:if isTrue="{!v.isMRRTabInitialized}">-->
-                    <!--                        <div class="{!if(v.currentTab == 'tab-medical-record-review-log', 'visible-tab', 'invisible-tab')}">-->
-                    <!--                            <c:MedicalRecordReviewLog showStatistics="false"/>-->
-                    <!--                        </div>-->
-                    <!--                    </aura:if>-->
-                    <aura:if isTrue="{!v.currentTab == 'tab-reports'}">
+                    <aura:if isTrue="{!and(v.currentTab == 'tab-reports', !empty(v.studyDetail))}">
                         <c:Reports trialId="{!v.studyDetail.trial.Id}"/>
                     </aura:if>
 
